my-cluster/api-test-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: api-test-service
  labels:
    app: myapp-backend
    type: backend
spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        app: myapp-backend
        type: backend
    spec:
      containers:
        - name: mybackend-container
          image: iwonajx/mybackend

  replicas: 3
  selector:
    matchLabels:
      type: backend
