my-cluster/frontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-service
  labels:
    app: myapp-frontend
    type: frontend
spec:
  template:
    metadata:
      name: myfrontend-pod
      labels:
        app: myapp-frontend
        type: frontend
    spec:
      containers:
        - name: myfrontend-container
          image: iwonajx/myfrontend
          tty: true

  replicas: 3
  selector:
    matchLabels:
      type: frontend
