my-cluster/postgres-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: postgres-deployment
  labels:
    app: mypostgres
    type: db
spec:
  template:
    metadata:
      name: postgres-pod
      labels:
        app: mypostgres
        type: db

    spec:
      containers:
        - name: my-postgres-container
          image: postgres
  replicas: 1
  selector:
    matchLabels:
      type: db
