my-cluster/frontend-clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 8080

  selector:
    type: frontend
