my-cluster/service-nodeport.yml
apiVersion: v1
kind: Service

metadata:
  name: myapp-service

spec:
  type: NodePort
  ports:
    - targetPort: 5000
      port: 80
      nodePort: 30008

  selector:
    app: myapp-backend
    type: backend
