my-cluster/service-nodeport2.yml
apiVersion: v1
kind: Service

metadata:
  name: myapp-service2

spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 80
      nodePort: 30007

  selector:
    app: myapp-frontend
    type: frontend
