my-cluster/ingress-service.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: ingress-test-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: api-test-service
              servicePort: 5050
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 8080
